force-app/main/default/objects/FS_Gestor_Cuenta__c/FS_Gestor_Cuenta__c.object-meta.xml
<CustomObject>
    <label>Gestor Cuenta</label>
    <nameField>
        <label>Nombre de Gestor Cuenta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gestor Cuentas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>