force-app/main/default/objects/FS_Gestor_Cuenta__c/fields/FS_Area__c.field-meta.xml
<CustomField>
    <fullName>FS_Area__c</fullName>
    <label>Área</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Omnia</fullName>
            </value>
            <value>
                <fullName>PM-PS</fullName>
            </value>
            <value>
                <fullName>KAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>