force-app/main/default/objects/FS_Gestor_Cuenta__c/fields/FS_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>FS_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gestor Cuentas</relationshipLabel>
    <relationshipName>Gestor_Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>