force-app/main/default/objects/FS_Gestor_Cuenta__c/fields/FS_Principal__c.field-meta.xml
<CustomField>
    <fullName>FS_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Principal</label>
    <type>Checkbox</type>
</CustomField>