force-app/main/default/objects/FS_Gestor_Cuenta__c/fields/FS_Producto__c.field-meta.xml
<CustomField>
    <fullName>FS_Producto__c</fullName>
    <label>Producto</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FISA System</fullName>
            </value>
            <value>
                <fullName>FISA CreditCard</fullName>
            </value>
            <value>
                <fullName>OMNIA</fullName>
            </value>
            <value>
                <fullName>FISA FISS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>