force-app/main/default/objects/FS_Gestor_Cuenta__c/fields/FS_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>FS_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Gestor_Cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>